tests/interface/interface.exp
Error -------------------------------------------------------------- fun.js:5:19

Cannot assign function to `f0` because in the return value, number is
incompatible with undefined.


Error ----------------------------------------------------------- indexer.js:9:3

Multiple indexers are not supported.


Error -------------------------------------------------------- interface.js:3:17

Cannot assign `new C().x` to `x` because number is incompatible with string.


Error -------------------------------------------------------- interface.js:7:13

Cannot reference type `I` from a value position.


Error -------------------------------------------------------- interface.js:10:6

Cannot get `o.name` because property `name` is missing in `I`.


Error ------------------------------------------------------------- test.js:6:17

Cannot assign object literal to `k` because in property `x`, string is
incompatible with number.


Error -------------------------------------------------------------- test.js:7:2

Cannot cast `k.x` to string because number is incompatible with string.


Error ------------------------------------------------------------ test.js:17:20

Cannot assign object literal to `e` because:
 - in property `x`, string is incompatible with number.
 - in property `z`, string is incompatible with number.


Error ------------------------------------------------------------- test.js:18:2

Cannot cast `e.x` to string because number is incompatible with string.


Error ------------------------------------------------------------- test.js:20:2

Cannot cast `e.z` to string because number is incompatible with string.


Error ------------------------------------------------------------ test2.js:5:34

Cannot get `l.z` because property `z` is missing in `L`.


Error ------------------------------------------------------------ test3.js:3:31

Cannot extend `I` with `K` because in property `x`, string is incompatible with
number.


Error ------------------------------------------------------------- test3.js:5:4

Cannot cast `k.x` to number because string is incompatible with number.


Error ------------------------------------------------------------- test3.js:6:4

Cannot cast `k.y` to number because string is incompatible with number.


Error ------------------------------------------------------------- test4.js:2:2

Cannot cast function to `I` because property `foo` is missing in function but
exists in `I`.


Error ------------------------------------------------------------ test4.js:9:17

Cannot call `new C().bar` with function bound to `f` because in the first
argument, string is incompatible with number.



Found 17 errors
